--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ anyhow = "1.0"
 genanki-rs = "0.4"
 thiserror = "1.0"
 
+[dev-dependencies]
+tempfile = "3.8"
+
 [profile.release]
 opt-level = 3
 lto = true
