--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,18 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
-tokio = { version = "1.0", features = ["full"] }
-reqwest = { version = "0.11", features = ["json", "cookies"] }
+tokio = { version = "1.36", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
 genanki-rs = "0.4"
 thiserror = "1.0"
+tempfile = "3.10"
 
 [dev-dependencies]
-tempfile = "3.8"
+mockito = "1.3"
+tokio-test = "0.4"
 
 [profile.release]
 opt-level = 3
@@ -25,3 +27,7 @@ lto = true
 codegen-units = 1
 panic = "abort"
 strip = true
+
+[[bin]]
+name = "fetch_cards"
+path = "src/bin/fetch_cards.rs"
