--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "1.0"
 tempfile = "3.10"
 base64 = "0.21"
 uuid = { version = "1.7", features = ["v4"] }
+async-trait = "0.1"
 
 [dev-dependencies]
 mockito = "1.3"
