--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,19 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Install OpenSSL for cross-compilation
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+          sudo apt-get install -y libssl-dev:arm64
+          export OPENSSL_DIR=/usr
+          export OPENSSL_INCLUDE_DIR=/usr/include
+          export OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu
+          echo "OPENSSL_DIR=/usr" >> $GITHUB_ENV
+          echo "OPENSSL_INCLUDE_DIR=/usr/include" >> $GITHUB_ENV
+          echo "OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu" >> $GITHUB_ENV
+
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
 
