--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc-aarch64-linux-gnu
-          sudo apt-get install -y libssl-dev:arm64
+          sudo apt-get install -y libssl-dev
           export OPENSSL_DIR=/usr
           export OPENSSL_INCLUDE_DIR=/usr/include
           export OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu
