--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,9 +34,9 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: duoload-linux-amd64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            artifact_name: duoload-linux-arm64
+        #   - os: ubuntu-latest
+        #     target: aarch64-unknown-linux-gnu
+        #     artifact_name: duoload-linux-arm64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             artifact_name: duoload-windows-amd64.exe
