--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,9 +34,9 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: duoload-linux-amd64
-        #   - os: ubuntu-latest
-            # target: aarch64-unknown-linux-gnu
-            # artifact_name: duoload-linux-arm64
+          - os: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
+            artifact_name: duoload-linux-arm64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             artifact_name: duoload-windows-amd64.exe
@@ -55,19 +55,6 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
-
-    #   - name: Install OpenSSL for cross-compilation
-    #     if: matrix.target == 'aarch64-unknown-linux-gnu'
-    #     run: |
-    #       sudo apt-get update
-    #       sudo apt-get install -y gcc-aarch64-linux-gnu
-    #       sudo apt-get install -y libssl-dev
-    #       export OPENSSL_DIR=/usr
-    #       export OPENSSL_INCLUDE_DIR=/usr/include
-    #       export OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu
-    #       echo "OPENSSL_DIR=/usr" >> "$GITHUB_ENV"
-    #       echo "OPENSSL_INCLUDE_DIR=/usr/include" >> "$GITHUB_ENV"
-    #       echo "OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu" >> "$GITHUB_ENV"
 
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
@@ -120,7 +107,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/duoload:${{ steps.cargo-version.outputs.version }}
