--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   check-version:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.cargo-version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
       
@@ -15,12 +17,12 @@ jobs:
         id: cargo-version
         run: |
           VERSION=$(grep '^version = ' Cargo.toml | cut -d '"' -f2)
-          echo "cargo_version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           
       - name: Check version matches tag
         run: |
           TAG_VERSION=${GITHUB_REF#refs/tags/v}
-          CARGO_VERSION=${{ steps.cargo-version.outputs.cargo_version }}
+          CARGO_VERSION=${{ steps.cargo-version.outputs.version }}
           if [ "$TAG_VERSION" != "$CARGO_VERSION" ]; then
             echo "Tag version ($TAG_VERSION) does not match Cargo.toml version ($CARGO_VERSION)"
             exit 1
@@ -28,24 +30,26 @@ jobs:
 
   build:
     needs: check-version
+    outputs:
+      version: ${{ needs.check-version.outputs.version }}
     strategy:
       matrix:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: duoload-linux-amd64
+            artifact_name: duoload-x86_64-unknown-linux-gnu
           - os: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
-            artifact_name: duoload-linux-arm64
+            artifact_name: duoload-aarch64-unknown-linux-gnu
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: duoload-windows-amd64
+            artifact_name: duoload-x86_64-pc-windows-msvc
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: duoload-macos-amd64
+            artifact_name: duoload-x86_64-apple-darwin
           - os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: duoload-macos-arm64
+            artifact_name: duoload-aarch64-apple-darwin
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -62,11 +66,13 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact_name }}
+          name: ${{ matrix.artifact_name }}-v${{ needs.check-version.outputs.version }}
           path: target/${{ matrix.target }}/release/duoload${{ matrix.os == 'windows-latest' && '.exe' || '' }}
 
   docker:
     needs: [build, check-version]
+    outputs:
+      version: ${{ needs.check-version.outputs.version }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -74,24 +80,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Get version
-        id: cargo-version
-        run: |
-          VERSION=$(grep '^version = ' Cargo.toml | cut -d '"' -f2)
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
       - name: Download Linux artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
-          pattern: duoload-linux-*
+          pattern: duoload-*-linux-*-v${{ needs.check-version.outputs.version }}
 
       - name: List artifacts contents
         run: |
           echo "Contents of artifacts directory:"
           ls -la artifacts/
-          echo "Contents of artifacts/duoload-linux-*:"
-          ls -la artifacts/duoload-linux-*
+          echo "Contents of Linux artifacts:"
+          ls -la artifacts/duoload-*-unknown-linux-gnu-v${{ needs.check-version.outputs.version }}/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -110,10 +110,11 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/duoload:${{ steps.cargo-version.outputs.version }}
+            ghcr.io/${{ github.repository_owner }}/duoload:${{ needs.check-version.outputs.version }}
             ghcr.io/${{ github.repository_owner }}/duoload:latest
           build-args: |
-            VERSION=${{ steps.cargo-version.outputs.version }}
+            VERSION=${{ needs.check-version.outputs.version }}
+            TARGETARCH=${{ matrix.target == 'x86_64-unknown-linux-gnu' && 'x86_64' || 'aarch64' }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -125,55 +126,67 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Get version
-        id: cargo-version
-        run: |
-          VERSION=$(grep '^version = ' Cargo.toml | cut -d '"' -f2)
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
-          pattern: duoload-*
+          pattern: duoload-*-v${{ needs.check-version.outputs.version }}
 
       - name: Debug artifact contents
         run: |
           echo "Contents of artifacts directory:"
           ls -la artifacts/
-          echo "Contents of artifacts/duoload-*:"
-          ls -la artifacts/duoload-*
-          echo "Full path of artifacts:"
-          find artifacts -type f
+          echo "Contents of all artifacts:"
+          for dir in artifacts/duoload-*-v${{ needs.check-version.outputs.version }}; do
+            echo "Contents of $dir:"
+            ls -la "$dir"
+          done
+
+      - name: Verify release files exist
+        run: |
+          echo "Verifying release files..."
+          for file in \
+            "artifacts/duoload-x86_64-apple-darwin-v${{ needs.check-version.outputs.version }}/duoload" \
+            "artifacts/duoload-aarch64-apple-darwin-v${{ needs.check-version.outputs.version }}/duoload" \
+            "artifacts/duoload-x86_64-unknown-linux-gnu-v${{ needs.check-version.outputs.version }}/duoload" \
+            "artifacts/duoload-aarch64-unknown-linux-gnu-v${{ needs.check-version.outputs.version }}/duoload" \
+            "artifacts/duoload-x86_64-pc-windows-msvc-v${{ needs.check-version.outputs.version }}/duoload.exe"; do
+            if [ ! -f "$file" ]; then
+              echo "Error: File $file does not exist"
+              exit 1
+            fi
+            echo "Found: $file"
+          done
+          echo "All release files verified successfully"
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          name: Release v${{ steps.cargo-version.outputs.version }}
+          name: Release v${{ needs.check-version.outputs.version }}
           body: |
-            Release v${{ steps.cargo-version.outputs.version }}
+            Release v${{ needs.check-version.outputs.version }}
             
             ## Binaries
-            * Linux (AMD64): `duoload-linux-amd64`
-            * Linux (ARM64): `duoload-linux-arm64`
-            * Windows (AMD64): `duoload-windows-amd64.exe`
-            * macOS (AMD64): `duoload-macos-amd64`
-            * macOS (ARM64): `duoload-macos-arm64`
+            * Linux (AMD64): `duoload-x86_64-unknown-linux-gnu`
+            * Linux (ARM64): `duoload-aarch64-unknown-linux-gnu`
+            * Windows (AMD64): `duoload-x86_64-pc-windows-msvc.exe`
+            * macOS (AMD64): `duoload-x86_64-apple-darwin`
+            * macOS (ARM64): `duoload-aarch64-apple-darwin`
 
             ## Docker Images
             Docker images are available on GitHub Container Registry:
             ```bash
             # Pull specific version
-            docker pull ghcr.io/${{ github.repository_owner }}/duoload:${{ steps.cargo-version.outputs.version }}
+            docker pull ghcr.io/${{ github.repository_owner }}/duoload:${{ needs.check-version.outputs.version }}
             
             # Pull latest version
             docker pull ghcr.io/${{ github.repository_owner }}/duoload:latest
             ```
           files: |
-            artifacts/duoload-macos-amd64/duoload
-            artifacts/duoload-macos-arm64/duoload
-            artifacts/duoload-linux-amd64/duoload
-            artifacts/duoload-linux-arm64/duoload
-            artifacts/duoload-windows-amd64/duoload.exe
+            artifacts/duoload-x86_64-apple-darwin-v${{ needs.check-version.outputs.version }}/duoload
+            artifacts/duoload-aarch64-apple-darwin-v${{ needs.check-version.outputs.version }}/duoload
+            artifacts/duoload-x86_64-unknown-linux-gnu-v${{ needs.check-version.outputs.version }}/duoload
+            artifacts/duoload-aarch64-unknown-linux-gnu-v${{ needs.check-version.outputs.version }}/duoload
+            artifacts/duoload-x86_64-pc-windows-msvc-v${{ needs.check-version.outputs.version }}/duoload.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
